Added viper and validator
