# docs/swagger.json
@@ -191,6 +191,12 @@
     "definitions": {
         "dto.AddressInput": {
             "type": "object",
+            "required": [
+                "address",
+                "city",
+                "country",
+                "postcode"
+            ],
             "properties": {
                 "address": {
                     "type": "string"
@@ -237,6 +243,13 @@
         },
         "dto.UserInput": {
             "type": "object",
+            "required": [
+                "address",
+                "age",
+                "email",
+                "name",
+                "password"
+            ],
             "properties": {
                 "address": {
                     "$ref": "#/definitions/dto.AddressInput"
